client side and some settings

--- a/server/portal/apps/accounts/templates/portal/apps/accounts/login.html
+++ b/server/portal/apps/accounts/templates/portal/apps/accounts/login.html
@@ -3,7 +3,7 @@
 {% block title %} Login {% endblock %}
 {% block content %}
 <div class="container">
-  <h1 class="headline headline-community">SD2E Portal Login</h1>
+  <h1 class="headline headline-community">Portal Login</h1>
 
   <div class="row">
     <div class="col-xs-12">
