--- a/server/portal/apps/accounts/templates/portal/apps/accounts/manage_auth.html
+++ b/server/portal/apps/accounts/templates/portal/apps/accounts/manage_auth.html
@@ -9,7 +9,7 @@
             <h4>Changing your TACC Password</h4>
             <strong>Please Note:</strong> This form requests a reset to your TACC Account
             password. Changes to this password will affect your TACC Account
-            <em>as a whole</em>, not just at SD2E.
+            <em>as a whole</em>.
         </div>
 
         <form method="post" action="">
