--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -7,7 +7,7 @@
     <title>{% block title %}{% page_attribute "page_title" %}{% endblock %} SD2E </title>
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
-    <link rel="icon" href="{% static 'portal/img/favicon.png' %}">
+    <link rel="icon" href="{% static 'img/favicon.png' %}">
     <link rel="canonical" href="{{request.get_full_path}}">
     <base href="/">
     {% block head_extra %}{% endblock %}
@@ -18,11 +18,11 @@
     {% endcomment %}
     <!-- Vendor base css -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'portal/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/bootstrap-datepicker/dist/css/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.css' %}">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.css">
-    <link rel="stylesheet" href="{% static 'portal/css/portal.css' %}">
+    <link rel="stylesheet" href="{% static 'css/portal.css' %}">
 
     {% block styles %}{% endblock %}
     {% render_block "css" %}
