--- a/server/portal/apps/workspace/templates/portal/apps/workspace/workspace.html
+++ b/server/portal/apps/workspace/templates/portal/apps/workspace/workspace.html
@@ -14,25 +14,25 @@
 
 <div class="container-fluid" role="main" id="workspace">
   <div ng-controller="ApplicationTrayCtrl"
-       ng-include="'{% static "portal/scripts/angular/workspace/templates/application-tray.html" %}'"
+       ng-include="'{% static "src/angular/workspace/templates/application-tray.html" %}'"
        class="workspace-panel workspace-panel-fixed"></div>
   <div class="workspace-panel-container">
     <div ng-controller="DataBrowserCtrl"
-         ng-include="'{% static "portal/scripts/angular/workspace/templates/data-browser.html" %}'"
+         ng-include="'{% static "src/angular/workspace/templates/data-browser.html" %}'"
          class="workspace-panel workspace-panel-sidebar workspace-panel-sidebar-left"
          ng-class="{'workspace-panel-collapsed': panel.collapsed}"></div>
     <div ng-controller="ApplicationFormCtrl"
-         ng-include="'{% static "portal/scripts/angular/workspace/templates/application-form.html" %}'"
+         ng-include="'{% static "src/angular/workspace/templates/application-form.html" %}'"
          class="workspace-panel workspace-panel-main"></div>
     <div ng-controller="JobsStatusCtrl"
-         ng-include="'{% static "portal/scripts/angular/workspace/templates/job-status.html" %}'"
+         ng-include="'{% static "src/angular/workspace/templates/job-status.html" %}'"
          class="workspace-panel workspace-panel-sidebar workspace-panel-sidebar-right"
          ng-class="{'workspace-panel-collapsed': panel.collapsed}"></div>
   </div>
 </div>
 
 {% addtoblock "css" %}
-<link href="{% static 'portal/css/workspace.css' %}" rel="stylesheet">
+<link href="{% static 'css/workspace.css' %}" rel="stylesheet">
 {% endaddtoblock %}
 
 
