--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -23,6 +23,10 @@
     <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.css' %}">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.css">
     <link rel="stylesheet" href="{% static 'css/portal.css' %}">
+    <link rel="stylesheet" href="{% static 'css/workbench.css' %}">
+    <link rel="stylesheet" href="{% static 'css/workspace.css' %}">
+
+
 
     {% block styles %}{% endblock %}
     {% render_block "css" %}
