--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -22,10 +22,7 @@
     <link rel="stylesheet" href="{% static 'vendor/bootstrap-datepicker/dist/css/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.css' %}">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.css">
-    <link rel="stylesheet" href="{% static 'css/portal.css' %}">
-    <link rel="stylesheet" href="{% static 'css/workbench.css' %}">
-    <link rel="stylesheet" href="{% static 'css/workspace.css' %}">
-
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
 
 
     {% block styles %}{% endblock %}
