--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -1,10 +1,10 @@
 <div class="workbench">
   <div class="workbench-nav">
-    <div class="side-nav-button" ui-sref-active="active"> <a ui-sref="wb.dashboard" > <i class="fa fa-dashboard"></i> </a> </div>
-    <div class="side-nav-button" ui-sref-active="active"> <a ui-sref="wb.data_depot"> <i class="fa fa-database"></i> </a> </div>
-    <div class="side-nav-button" ui-sref-active="active"> <a ui-sref="wb.workspace"> <i class="fa fa-rocket"></i>  </a></div>
-    <div class="side-nav-button" ui-sref-active="active"> <a ui-sref="wb.help"> <i class="fa fa-question"></i> </a> </div>
-    <div class="side-nav-button" ui-sref-active="active"> <a ui-sref="wb.search"> <i class="fa fa-search"></i> </a> </div>
+    <div class="side-nav-button" ui-sref="wb.dashboard"  ui-sref-active="active"><i class="fa fa-dashboard"></i></div>
+    <div class="side-nav-button" ui-sref="wb.data_depot" ui-sref-active="active"><i class="fa fa-database"></i></div>
+    <div class="side-nav-button" ui-sref="wb.workspace" ui-sref-active="active"><i class="fa fa-rocket"></i></div>
+    <div class="side-nav-button" ui-sref="wb.help" ui-sref-active="active"><i class="fa fa-question"></i></div>
+    <div class="side-nav-button" ui-sref="wb.search" ui-sref-active="active"><i class="fa fa-search"></i></div>
   </div>
   <div class="workbench-content">
     <ui-view></ui-view>
