Removes extraneous routes. Relocated ng-app from base template to workbench template. Fixed path value on search nav target in workbench.

--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -28,7 +28,7 @@
     {% block styles %}{% endblock %}
     {% render_block "css" %}
   </head>
-  <body ng-app="portal">
+  <body>
     <div class="content">
       {% cms_toolbar %}
       {# {% include 'includes/header.html' %}#}
