--- a/server/portal/templates/includes/header.html
+++ b/server/portal/templates/includes/header.html
@@ -3,7 +3,9 @@
 <header class="container-fluid site-banner">
   <div class="pull-left">
     <a class="logo" href="/">
+      <!--
       <img alt="UT-PORTAL" src="{% static 'portal/img/SD2_branding.jpg' %}" height="40"/>
+      -->
     </a>
   </div>
   <div class="site-banner-right">
@@ -16,7 +18,8 @@
             &nbsp;
             <a class="text-danger" title="API Session Not Available. Click for details." href="{% url 'portal_auth:agave_session_error' %}"><i class="fa fa-exclamation-triangle"></i><span class="sr-only">API Session Not Available. Click for details.</span></a>
           {% endif %}
-        </span>-->
+        </span>
+        -->
         <div class="btn-group pull-right">
           <a href="{% url 'portal_accounts:index' %}" class="btn btn-link-alt">My account</a>
           <button type="button" class="btn default dropdown-toggle"
