--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -1,9 +1,12 @@
 {% load sd2e_nav_tags menu_tags cms_tags staticfiles %}
-<nav class="navbar navbar-default navbar-ds">
+<nav class="navbar navbar-default navbar-portal">
   <div class="container-fluid">
     <div class="navbar-header">
       <a href="/" class="navbar-left">
         <img src="{% static 'img/logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
+        <!--
+        <img src="{% static 'img/cep_logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
+        -->
       </a>
       <!-- Normal Navbar -->
       <ul class="nav navbar-nav hidden-xs">
