devops and settings

--- a/devops/ansible/playbooks/roles/project_setup/templates/settings_secret.j2
+++ b/devops/ansible/playbooks/roles/project_setup/templates/settings_secret.j2
@@ -3,16 +3,10 @@
 """
 
 import os
-BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
-
 {% for setting_key, item in django_settings_secret.iteritems() %}
   {% if item is string %}
 {{setting_key}} = "{{item}}"
   {% else %}
-    {% if item.type and item.type|string() != "string" %}
-{{setting_key}} = {{item.value}}
-      {% else %}
-{{settings_key}} = "{{item.value}}"
-    {% endif %}
+{{setting_key}} = {{item}}
   {% endif %}
 {% endfor %}
