--- a/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
+++ b/devops/ansible/playbooks/roles/nginx/templates/nginx.conf.j2
@@ -62,7 +62,7 @@ http {
         }
 
         location /static {
-            alias {{project_home_dir}}/{{project_name}}/static;
+            alias {{project_home_dir}}/{{project_name}}/server/static;
         }
 
         location /favicon.ico {
