--- a/client/src/angular/workbench/templates/search.html
+++ b/client/src/angular/workbench/templates/search.html
@@ -33,7 +33,7 @@
         </div>
         <div class="col-md-9" ng-show="data.search_results">
           <h2> Search Results {{makeUrl(data)}} </h2>
-          <div ng-show='hits.hits==0'>
+          <div ng-show='data.search_results.total_hits === 0'>
             <div class="alert alert-danger">
               <h3>
                   no results in {{prettyFilterName[data.type_filter]}}
