--- a/server/portal/apps/accounts/templates/portal/apps/accounts/register.html
+++ b/server/portal/apps/accounts/templates/portal/apps/accounts/register.html
@@ -16,7 +16,7 @@
           </h3>
           <p>
             If you already have a TACC account, simply
-            <a href="{% url 'portal_auth:agave_oauth' %}">log in</a> with your TACC username and password to access SD2E.
+            <a href="{% url 'portal_auth:agave_oauth' %}">log in</a> with your TACC username and password to access Portal.
           </p>
           <p>
             You may have a TACC account if you have used XSEDE or TeraGrid in the past and had an allocation on a TACC resource.
@@ -26,9 +26,9 @@
 
       <div class="col-md-7 col-md-pull-5">
         <p class="lead">
-          SD2E uses the TACC Identity Service. To use SD2E you need to
+          Portal uses the TACC Identity Service. To use Portal you need to
           register for a TACC Account. With a TACC Account you will be able to access
-          SD2E as well as additional services provided by TACC. See the
+          Portal as well as additional services provided by TACC. See the
           <a href="https://www.tacc.utexas.edu" target="_blank">TACC Website</a> for more
           information.
         </p>
