--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -1,4 +1,4 @@
-{% load cms_tags staticfiles sekizai_tags menu_tags %}
+{% load cms_tags staticfiles sekizai_tags menu_tags recaptcha2 %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -27,6 +27,7 @@
 
     {% block styles %}{% endblock %}
     {% render_block "css" %}
+    {% recaptcha_init 'en' %}
   </head>
   <body>
     <div class="content">
