fixing link to myData

--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -48,7 +48,7 @@
         <div ng-show="!jobs.length" class="panel-body">
           <h3 ng-show="!loading_jobs">
             No recent jobs! You can submit jobs in the
-            <a href="/rw/workspace"> Workspace </a>
+            <a ui-sref="wb.workspace"> Workspace </a>
           </h3>
           <div class="text-center" ng-show="loading_jobs">
             <i class="fa fa-spinner fa-pulse fa-2x fa-fw" ></i>
@@ -123,7 +123,7 @@
           </li>
           <li class="list-group-item" ng-show="!recent_apps.length">
             Wow, no recent apps! You can submit jobs in the
-            <a href="/rw/workspace"> Workspace </a>
+            <a ui-sref="wb.workspace"> Workspace </a>
           </li>
         </ul>
       </div>
