--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -1,7 +1,7 @@
 
 <div class="container-fluid" id="dashboard">
   <div class="row dashboard-top">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="dashboard-stat blue">
         <div class="visual">
           <i class="fa fa-rocket"></i>
@@ -12,7 +12,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="dashboard-stat green">
         <div class="visual">
           <i class="fa fa-cogs"></i>
@@ -23,7 +23,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="dashboard-stat red">
         <div class="visual">
           <i class="fa fa-database"></i>
@@ -33,6 +33,14 @@
           <div class="desc"> Data Stored </div>
         </div>
       </div>
+    </div>
+    <div class="col-sm-3">
+      <div><span>Quick Links</span></div>
+      <div><a href="#">Manage Account</a></div>
+      <div><a href="#">Data Depot</a></div>
+      <div><a href="#">Workspace</a></div>
+      <div><a href="#">Recon Portal</a></div>
+      <div><a href="#">Training</a></div>
     </div>
 
   </div>
