--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -36,11 +36,10 @@
     </div>
     <div class="col-sm-3">
       <div><span>Quick Links</span></div>
-      <div><a href="#">Manage Account</a></div>
-      <div><a href="#">Data Depot</a></div>
-      <div><a href="#">Workspace</a></div>
-      <div><a href="#">Recon Portal</a></div>
-      <div><a href="#">Training</a></div>
+      <div><a href="/accounts/profile">Manage Account</a></div>
+      <div><a href="/workbench/data-depot ">Data Depot</a></div>
+      <div><a href="/workbench/workspace">Workspace</a></div>
+      <div><a href="/workbench/help">Training</a></div>
     </div>
 
   </div>
@@ -56,7 +55,7 @@
         <div ng-show="!jobs.length" class="panel-body">
           <h3 ng-show="!loading_jobs">
             No recent jobs! You can submit jobs in the
-            <a href="/rw/workspace"> Workspace </a>
+            <a href="/workbench/workspace"> Workspace </a>
           </h3>
           <div class="text-center" ng-show="loading_jobs">
             <i class="fa fa-spinner fa-pulse fa-2x fa-fw" ></i>
@@ -127,11 +126,11 @@
         </div>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="app in recent_apps">
-            <a href="/rw/workspace/#/{{app}}"> {{app}} </a>
+            <a href="/workbench/workspace/#/{{app}}"> {{app}} </a>
           </li>
           <li class="list-group-item" ng-show="!recent_apps.length">
             Wow, no recent apps! You can submit jobs in the
-            <a href="/rw/workspace"> Workspace </a>
+            <a href="/workbench/workspace"> Workspace </a>
           </li>
         </ul>
       </div>
