--- a/client/src/angular/workbench/templates/data-depot.html
+++ b/client/src/angular/workbench/templates/data-depot.html
@@ -135,19 +135,49 @@
           </div>
         </div>
         <!-- don't use [ng-controller="DataBrowserCtrl"] twice it's alreayd set up -->
-        <!-- this area will have the buttons for the different directories and their views -->
-        <div>
-            <a ui-sref="wb.data_depot.db({systemId: sysMyData.systemId, filePath:'', name: sysMyData.name, directory: 'agave'})">
-                <button>My Data</button>
-            </a>
-            <a ui-sref="wb.data_depot.db({systemId: sysCommunityData.systemId, filePath:'', name: sysCommunityData.name, directory: 'public'})">
-                <button>Community Data</button>
-            </a>
+        <!-- Nav -->
+        <div class="list-group list-group-root well">
+            <div>
+                <a class="list-group-item"
+                    ui-sref="wb.data_depot.db({
+                                systemId: sysMyData.systemId,
+                                filePath:'',
+                                name: sysMyData.name,
+                                directory: 'agave'})"
+                    ui-sref-active="active">
+                    <i class="fa fa-user">&ensp;</i>
+                    My Data
+                </a>
+            </div>
+            <div>
+                <a class="list-group-item"
+                    ui-sref="wb.data_depot.db({
+                                systemId: null,
+                                filePath: null,
+                                name: 'My Projects',
+                                directory: 'projects'})"
+                    ui-sref-active="active">
+                    <i class="fa fa-briefcase">&ensp;</i>
+                    My Projects
+                </a>
+            </div>
+            <div>
+                <a class="list-group-item"
+                    ui-sref="wb.data_depot.db({
+                                systemId: sysCommunityData.systemId,
+                                filePath:'',
+                                name: sysCommunityData.name,
+                                directory: 'public'})"
+                    ui-sref-active="active">
+                    <i class="fa fa-users">&ensp;</i>
+                    Community Data
+                </a>
+            </div>
         </div>
 
+        <!-- OLD SIDE NAV -->
         <!-- <div ng-controller="DataDepotNavCtrl">
           <div class="list-group list-group-root well">
-
               <div class="list-group collapse"
                    ng-class="{'in': !routerItem.collapse}"
                    ng-repeat="childItem in routerItems">
@@ -160,7 +190,6 @@
               </div>
           </div>
         </div> -->
-
       </div>
       <div class="col-sm-9 col-md-10">
         <ui-view>
