beginning of nav changes

--- a/client/src/angular/workbench/templates/home.html
+++ b/client/src/angular/workbench/templates/home.html
@@ -1,7 +1,7 @@
 <div class="workbench">
   {{systems}}
   <div class="workbench-nav">
-    <div class="side-nav-button" ui-sref="wb.dashboard"  ui-sref-active="active"><i class="fa fa-dashboard"></i></div>
+    <div class="side-nav-button" ui-sref="wb.dashboard"  ui-sref-active="active"><i class="fa fa-dashboard"></i>Dashboard</div>
     <div class="side-nav-button" ui-sref="wb.data_depot.db.myData({'systemId':vm.mydata_system.systemId, 'path': '/'})" ui-sref-active="active"><i class="fa fa-database"></i></div>
     <div class="side-nav-button" ui-sref="wb.workspace" ui-sref-active="active"><i class="fa fa-rocket"></i></div>
     <div class="side-nav-button" ui-sref="wb.help" ui-sref-active="active"><i class="fa fa-question"></i></div>
