--- a/client/css/dashboard.css
+++ b/client/css/dashboard.css
@@ -1,4 +1,3 @@
-
 #dashboard {
   margin-top: 0px;
 }
@@ -115,4 +114,28 @@
     line-height: 15px;
     letter-spacing: 0px;
     font-weight: 300;
+}
+
+.system-item {
+    overflow: auto;
+    border-bottom:1px solid #ccc;
+}
+
+.panel-body .system-item:last-child {
+    border-bottom: none;
+}
+
+.system-actions {
+    padding-top:10px;
+}
+
+.system-actions button{
+    display:block;
+    width:100%;
+    margin-top:3px;
+    margin-bottom:3px;
+}
+
+.system-item .system-def-list dt{
+    margin-top:0px;
 }
