--- a/client/src/angular/workbench/templates/dashboard.html
+++ b/client/src/angular/workbench/templates/dashboard.html
@@ -100,8 +100,7 @@
       <div class="panel panel-default">
         <div class="panel-heading clearfix dashboard">
           <h3 class="panel-title pull-left">My Tickets</h3>
-          <!-- <a class="button btn-xs btn-primary pull-right" href="/help/tickets"> Create New </a> -->
-          <a class="button btn-xs btn-primary pull-right" href="https://consult.tacc.utexas.edu/Ticket/Create.html?Queue=21"> Create New </a>
+          <a class="button btn-xs btn-primary pull-right" href="/tickets/ticket/new/"> Create New </a>
         </div>
           <ul class="list-group">
             <li class="list-group-item" ng-repeat="ticket in my_tickets">
