--- a/server/portal/templates/includes/navigation.html
+++ b/server/portal/templates/includes/navigation.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-default navbar-portal">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="/" class="navbar-left">
+      <a href="/landing-page/" class="navbar-left">
         <img src="{% static 'img/logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
         <!--
         <img src="{% static 'img/cep_logo.png'%}" class="portal-branding nav-icon" style="height:45px;">
