Add license integration to user model and accounts page

--- a/server/portal/apps/accounts/templates/portal/apps/accounts/index.html
+++ b/server/portal/apps/accounts/templates/portal/apps/accounts/index.html
@@ -22,8 +22,8 @@
           <!-- {% url 'portal_accounts:manage_identities' as item_url %}
           <li {% if request.path == item_url %}class="active"{% endif %}><a href="{{item_url}}">Identities</a></li> -->
 
-          <!-- {% url 'portal_accounts:manage_licenses' as item_url %}
-          <li {% if request.path == item_url %}class="active"{% endif %}><a href="{{item_url}}">Licenses</a></li> -->
+          {% url 'portal_accounts:manage_licenses' as item_url %}
+          <li {% if request.path == item_url %}class="active"{% endif %}><a href="{{item_url}}">Licenses</a></li>
 
           <!-- {% url 'portal_accounts:manage_notifications' as item_url %}
           <li {% if request.path == item_url %}class="active"{% endif %}><a href="{{item_url}}">Notification Settings</a></li> -->
