--- a/client/src/angular/workspace/templates/application-form.html
+++ b/client/src/angular/workspace/templates/application-form.html
@@ -2,11 +2,10 @@
     <div class="jumbotron">
         <h1>Select an app</h1>
         <p>Select an application from the tray above.</p>
-        <p>
-            This initial version of the <em>Discovery Workspace</em> allows users to
-            perform simulations and analyze data using popular open source simulation
-            codes OpenSees, ADCIRC, and OpenFOAM, as well as commercial tools such as
-            MATLAB (software license verification required).</p>
+        <p> The <em>Workspace</em> allows users to perform simulations and analyze 
+            data using popular simulation codes as well as data analysis and visualization tools including Jupyter, MATLAB,
+             and QGIS.
+        </p>
     </div>
 </div>
 <div ng-if="data.type === 'html' && data.app">
@@ -14,13 +13,15 @@
 </div>
 <div ng-if="data.type === 'agave' && data.app" class="app-form-wrapper">
     <div class="lead alert alert-warning" ng-if="data.needsLicense">
-        <h2>Software License Required</h2>
-        <p>
-            The use of this application required that your have a {{data.app.license.type}}
-            license enabled for your account. Please visit the
-            <a href="/account/licenses/" target="_blank">manage software licenses</a>
-            section on the My Account page for details on how to enable this license.
-        </p>
+        <ng-container ng-if="data.app.license.type=='MATLAB'">
+            <h2>Academic License Eligibility Verification Required</h2>
+            <p>
+                The Portal MATLAB license requires verification that you are an academic user.
+                Please visit the <a href="/accounts/licenses/" target="_blank">manage software licenses</a>
+                section on the Manage Account page to request activation of this license for your
+                 Portal user account.
+            </p>
+        </ng-container>
     </div>
     <div class="messages">
         <div ng-repeat="message in data.messages" class="alert alert-{{message.type}}">
@@ -29,7 +30,7 @@
         </div>
     </div>
     <h2>Run <em>{{data.app.label}}</em></h2>
-    <p>{{data.app.longDescription}}</p>
+    <p ng-bind-html="data.app.longDescription"></p>
     <p ng-if="data.app.helpURI">
         <a href="{{data.app.helpURI}}" target="_blank">
             <i class="fa fa-book"></i> <span><em>{{data.app.label}}</em> Documentation</span>
@@ -40,7 +41,7 @@
           sf-form="form.form"
           sf-model="form.model"
           sf-options="{ supressPropertyTitles: true }"
-          ng-submit="onSubmit(appForm)"></form>
+          ng-submit="!data.submitting && onSubmit(appForm)"></form>
 
     <div ng-if="data.submitting">
         <span class="label label-info">
