Change angular to latest 1.6.x version

--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -49,10 +49,9 @@
     <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script src="{% static 'vendor/underscore/underscore.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.js"></script>
+    <script src="{% static 'vendor/angular/angular.js' %}"></script>
     <script src="{% static 'vendor/angular-sanitize/angular-sanitize.min.js' %}"></script>
     <script src="{% static 'vendor/angular-translate/dist/angular-translate.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-httpi/build/httpi.min.js' %}"></script>
     <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap.js' %}"></script>
     <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' %}"></script>
     <script src="https://cdn.rawgit.com/AngularClass/angular-websocket/v2.0.0/dist/angular-websocket.min.js"></script>
