Downgraded angular in base.j2 to angular 1.6.9 for schemaForm compatability.

--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -49,7 +49,8 @@
     <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script src="{% static 'vendor/underscore/underscore.js' %}"></script>
-    <script src="{% static 'vendor/angular/angular.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
+    <!-- <script src="{% static 'vendor/angular/angular.js' %}"></script> -->
     <script src="{% static 'vendor/angular-sanitize/angular-sanitize.min.js' %}"></script>
     <script src="{% static 'vendor/angular-translate/dist/angular-translate.min.js' %}"></script>
     <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap.js' %}"></script>
