--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -50,8 +50,9 @@
     <script src="{% static 'vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
     <script src="{% static 'vendor/underscore/underscore.js' %}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.9/angular-sanitize.min.js"></script>
     <!-- <script src="{% static 'vendor/angular/angular.js' %}"></script> -->
-    <script src="{% static 'vendor/angular-sanitize/angular-sanitize.min.js' %}"></script>
+    <!-- <script src="{% static 'vendor/angular-sanitize/angular-sanitize.min.js' %}"></script> -->
     <script src="{% static 'vendor/angular-translate/dist/angular-translate.min.js' %}"></script>
     <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap.js' %}"></script>
     <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' %}"></script>
