--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -19,9 +19,6 @@
     <!-- Vendor base css -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/bootstrap-datepicker/dist/css/bootstrap-datepicker.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/font-awesome/css/font-awesome.css' %}">
-    <link rel="stylesheet" href="{% static 'vendor/angular-material/angular-material.css' %}">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
 
 
@@ -43,35 +40,34 @@
     <!-- scripts -->
     <!-- Vendor base JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.0.0/d3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script>
-    <script src="{% static 'vendor/jquery/dist/jquery.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script>
-    <script src="{% static 'vendor/underscore/underscore.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.9/angular-sanitize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.0/moment.min.js"></script> -->
+    <!-- <script src="{% static 'vendor/jquery/dist/jquery.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/bootstrap/dist/js/bootstrap.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/underscore/underscore.js' %}"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.9/angular-sanitize.min.js"></script> -->
     <!-- <script src="{% static 'vendor/angular/angular.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-sanitize/angular-sanitize.min.js' %}"></script> -->
-    <script src="{% static 'vendor/angular-translate/dist/angular-translate.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap.js' %}"></script>
-    <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' %}"></script>
-    <script src="https://cdn.rawgit.com/AngularClass/angular-websocket/v2.0.0/dist/angular-websocket.min.js"></script>
-    <script src="{% static 'vendor/angular-aria/angular-aria.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-material/angular-material.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-messages/angular-messages.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-animate/angular-animate.min.js' %}"></script>
-    <script src="{% static 'vendor/ng-storage/ngStorage.js' %}"></script>
-    <script src="{% static 'vendor/angular-cookies/angular-cookies.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-ui-router/release/angular-ui-router.min.js' %}"></script>
+    <!-- <script src="{% static 'vendor/angular-translate/dist/angular-translate.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-aria/angular-aria.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-material/angular-material.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-messages/angular-messages.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-animate/angular-animate.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/ng-storage/ngStorage.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-cookies/angular-cookies.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-ui-router/release/angular-ui-router.min.js' %}"></script> -->
     <script src="{% static 'vendor/tv4/tv4.js' %}"></script>
     <script src="{% static 'vendor/objectpath/lib/ObjectPath.js' %}"></script>
-    <script src="{% static 'vendor/angular-schema-form/dist/schema-form.js' %}"></script>
-    <script src="{% static 'vendor/angular-schema-form/dist/bootstrap-decorator.js' %}"></script>
-    <script src="{% static 'vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.min.js' %}"></script>
-    <script src="{% static 'vendor/angular-xeditable/dist/js/xeditable.min.js' %}"></script>
+    <!-- <script src="{% static 'vendor/angular-schema-form/dist/schema-form.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-schema-form/dist/bootstrap-decorator.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.min.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/angular-xeditable/dist/js/xeditable.min.js' %}"></script> -->
     <!-- Custom base js -->
 
+    <script src="<%= htmlWebpackPlugin.files.chunks.vendor.entry %>"></script>
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
     <!--
     <script  src="{% static 'portal/scripts/angular/main.module.js' %}"></script>
