--- a/server/portal/templates/includes/analytics.html
+++ b/server/portal/templates/includes/analytics.html
@@ -4,16 +4,14 @@
     {# DEVELOPMENT & STAGING ANALYTICS #}
     {% if settings.GOOGLE_ANALYTICS_PRELOAD %}
       {# PRELOAD VERSION - MODERN BROWSERS #}
-      <!-- Global Site Tag (gtag.js) -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id={{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}"></script>
       <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}');
-        // test Universal Analytics on localhost.
-        gtag('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', {'cookieDomain': 'none'});
+        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+        // ga('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', 'auto');
+        // Test Universal Analytics on localhost.
+        ga('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', {'cookieDomain': 'none'});
+        ga('send', 'pageview');
       </script>
+      <script async src='https://www.google-analytics.com/analytics.js'></script>
     {% else %}
       {# ASYNC VERSION #}
       <script>
@@ -21,10 +19,10 @@
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-        ga('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', 'auto');
-        ga('send', 'pageview');
-        // test Universal Analytics on localhost.
+        // ga('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', 'auto');
+        // Test Universal Analytics on localhost.
         ga('create', '{{ settings.GOOGLE_ANALYTICS_PROPERTY_ID }}', {'cookieDomain': 'none'});
+        ga('send', 'pageview');
       </script>
     {% endif %}
 
