--- a/server/portal/templates/base.j2
+++ b/server/portal/templates/base.j2
@@ -12,15 +12,12 @@
     <base href="/">
     {% block head_extra %}{% endblock %}
     <!-- styles -->
-    {% comment %}
-    {% stylesheet 'vendor' %}
-    {% stylesheet 'main' %}
-    {% endcomment %}
+
     <!-- Vendor base css -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.chunks.main.css %>">
-
 
     {% block styles %}{% endblock %}
     {% render_block "css" %}
@@ -59,23 +56,15 @@
     <!-- <script src="{% static 'vendor/ng-storage/ngStorage.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-cookies/angular-cookies.min.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-ui-router/release/angular-ui-router.min.js' %}"></script> -->
-    <script src="{% static 'vendor/tv4/tv4.js' %}"></script>
-    <script src="{% static 'vendor/objectpath/lib/ObjectPath.js' %}"></script>
+    <!-- <script src="{% static 'vendor/tv4/tv4.js' %}"></script> -->
+    <!-- <script src="{% static 'vendor/objectpath/lib/ObjectPath.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-schema-form/dist/schema-form.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-schema-form/dist/bootstrap-decorator.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-drag-and-drop-lists/angular-drag-and-drop-lists.min.js' %}"></script> -->
     <!-- <script src="{% static 'vendor/angular-xeditable/dist/js/xeditable.min.js' %}"></script> -->
     <!-- Custom base js -->
-
-    <script src="<%= htmlWebpackPlugin.files.chunks.vendor.entry %>"></script>
     <script src="<%= htmlWebpackPlugin.files.chunks.main.entry %>"></script>
-    <!--
-    <script  src="{% static 'portal/scripts/angular/main.module.js' %}"></script>
-    <script  src="{% static 'portal/scripts/angular/ng-modernizr.js' %}"></script>
-    <script  src="{% static 'portal/scripts/angular/ng-designsafe-filters.js' %}"></script>
-    <script  src="{% static 'portal/scripts/angular/ng-designsafe-directives.js' %}"></script>
-  -->
-    <!-- Extended templates JS -->
+      <!-- Extended templates JS -->
     {% block scripts %}{% endblock %}
     <!-- User Auth Check -->
     <script type="text/javascript">
